--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ html, body{
 	background-size: cover;
 	position: relative;
 	display: flex;
+	flex-direction: row;
 	justify-content: space-around;
 	margin-bottom: 2px;
 	padding-bottom: 5px;
@@ -31,6 +32,7 @@ html, body{
 .nav{
 	width: 350px;
 	height: auto;
+	display: flex;
 	background-color: #333333;
 	position: absolute;
 	top: 25%;
@@ -164,13 +166,13 @@ a:active{
 }
 .para{
 	font-size: 20px;
-	font-color:black;
+	font-color:white;
 	text-align: left;
+
 	padding-right: 400px;
 	text-decoration: none;
 	margin-left: -750px;
 	margin-top: 35%;
-	display: fixed;
 }
 .person{
 	text-align: center;
@@ -189,12 +191,23 @@ a:active{
 @media screen and (max-width: 600px)
 {
 
-	.nav
-	{
-		flex-direction: column;
-	}
 	.background
 	{
 		flex-direction: column;
+		width: 100%;
+		background-color: black
+	}
+	.para
+	{
+		width: 100%;
+		padding-right: 0px;
+		margin-left: -10px;
+	}
+
+	article {
+		margin-top: 500px;
+	}
+	article h1, p {
+		color: black;
 	}
 }
